Project

General

Profile

Actions

Bug #5991

closed

fiddle/conversion.c ignores unsigned qualifier

Bug #5991: fiddle/conversion.c ignores unsigned qualifier

Added by nobu (Nobuyoshi Nakada) over 14 years ago. Updated over 14 years ago.

Status:
Closed
Target version:
ruby -v:
r34519
Backport:
[ruby-core:42458]

Description

=begin
In (({value_to_generic()})), ((|signed_p|)) seems to be ignored except for
(({TYPE_LONG})), and (({NUM2LONG()})) is used even if ((|signed_p|)) is not set.
(({NUM2INT()})) and (({NUM2UINT()})) have different value ranges, so I
think they should be separated.

And in (({generic_to_value()})), ((|signed_p|)) is ignored only for
(({TYPE_LONG_LONG})), and I can't see any reason to make the
difference.

Patch is attached.


Files

fiddle.diff (2.68 KB) fiddle.diff nobu (Nobuyoshi Nakada), 02/10/2012 12:38 AM

Related issues 1 (0 open — 1 closed)

Has duplicate Backport193 - Backport #6022: DL on MinGW: bignum too big to convert into `long' (memory_status test)ClosedActions
Actions

Also available in: PDF Atom