ext/fiddle/conversions.h
@@ -18,7 +18,8 @@ typedef union
     float ffloat;          /* ffi_type_float */
     double ddouble;        /* ffi_type_double */
 #if HAVE_LONG_LONG
-    unsigned LONG_LONG long_long; /* ffi_type_uint64 */
+    unsigned LONG_LONG ulong_long; /* ffi_type_ulong_long */
+    signed LONG_LONG slong_long; /* ffi_type_ulong_long */
 #endif
     void * pointer;        /* ffi_type_pointer */
 } fiddle_generic;
